--- a/ingestion/pom.xml
+++ b/ingestion/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-boot-starter-batch</artifactId>
         </dependency>
 
+        <!-- (optionnel mais souvent présent si tu écris en base) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <!-- JDBC + PostgreSQL -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
