--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,70 @@
-# Fichiers sensibles
+# --- Sensible / env
 .env
+.env.*
+!.env.example
+**/.env
+**/.env.*
+!**/.env.example
 
-# Maven (backend)
-backend/target/
+# --- Logs
+logs
+**/logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
+*.pid
+*.seed
+*.pid.lock
 
-# Node/Vite (frontend)
-everlake-api-ui/node_modules/
-everlake-api-ui/dist/
-everlake-api-ui/.env.local
-everlake-api-ui/.env.*
-everlake-api-ui/.npmrc
+# --- Node/Front (monorepo)
+**/node_modules/
+**/dist/
+**/build/
+**/.next/
+**/.nuxt/
+**/.turbo/
+**/.cache/
+**/.parcel-cache/
+**/.vite
+**/.vite-cache
+**/coverage/
+**/.eslintcache
+**/.stylelintcache
 
-# IntelliJ IDEA
+# --- Java/Maven/Gradle (monorepo)
+**/target/
+**/generated-sources/
+**/surefire-reports/
+.gradle/
+build/
+
+# --- IDE
 .idea/
 *.iml
-
-# Eclipse / STS
-.apt_generated/
+.vscode/
+.nb-gradle/
+nbproject/private/
 .classpath
-.factorypath
 .project
 .settings/
+.apt_generated/
+.factorypath
 .springBeans
 .sts4-cache/
 
-# VS Code
-.vscode/
+# --- Données lourdes (recommandé)
+**/data/**
+!**/data/samples/**           # garde seulement des échantillons
+*.csv                         # ignore tous les CSV…
+!**/data/samples/**/*.csv     # …sauf ceux dans data/samples/
 
-# NetBeans
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# --- Locks Office/LibreOffice
+~$*
+.~lock.*#
 
-# Autres fichiers temporaires
-*.swp
-*.tmp
+# --- OS
 .DS_Store
 Thumbs.db
+desktop.ini
